revise to version2.2.2

--- a/project.json
+++ b/project.json
@@ -1,5 +1,6 @@
 {
   "engine": "cocos-creator-js",
   "packages": "packages",
-  "version": "2.1.2"
+  "version": "2.2.2",
+  "id": "15764239-15b4-4b4c-8daa-1df0fa7dbfa5"
 }
